<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunForYourLife</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginUsername">Enter Username</string>
    <string name="loginPassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="webaddress">www.chowlb.com</string>
    <string name="newemail">Email</string>
    <string name="newusername">Username</string>
    <string name="newpassword">Password</string>
    <string name="verifypassword">Verify Password</string>
    <string name="verifyemail">Verify Email</string>
    <string name="register">Register</string>
    <string name="logo">chowlb.com</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registerEmail">Enter Email</string>
    <string name="usernameTaken">username is already taken</string>
    <string name="registerEmailVerify">Verify Email</string>
    <string name="loginPasswordVerify">Verify Password</string>
    <string name="verifyemailFail">Entered Email Does Not Match</string>
    <string name="verifypasswordFail">Passwords Do Not Match</string>
    <string name="loginfailed">Username Or Password Incorrect</string>
    <string name="passwordStrengthFailed">Password must be 8 characters or longer and contain at least 1 digit, 1 uppercase, 1 lowercase, and 1 special character</string>
    <string name="inventory">Inventory</string>
    <string name="suicide">Suicide</string>
    <string name="title_activity_show_inventory">ShowInventoryActivity</string>
    <string name="item">ITEM</string>
    <string name="status">STATUS</string>
    <string name="logout">Logout</string>
    <string name="title_activity_single_item">SingleItemActivity</string>
    <string name="quit">Quit</string>
    <string name="addDrop">Add Drop</string>
    <string name="title_activity_show_cache_inventory">ShowCacheInventoryActivity</string>
    <string name="addItem">Add Item</string>
    <string name="takeItem">Take Item</string>
    <string name="refreshCaches">Refresh Caches</string>

</resources>
